# cuvis-ai-dataloader

./: .gitattributes  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  cuvis_ai_compat.yml  no-local-sources.yml  pypi-release.yml
configs/plugins/: cuvis_ai_dataloader.yaml
cuvis_ai_dataloader/: __init__.py
cuvis_ai_dataloader/data/: __init__.py  _crop.py  _extras.py  _universe.py  datamodule_cu3s.py  datamodule_cu3s_multi.py  datamodule_cu3s_workspace.py  datamodule_npz_multi.py  datamodule_tiff_paired.py  npz_converter.py  resolvers.py  split_resolver.py  workspace.py
cuvis_ai_dataloader/data/labelers/: __init__.py  coco_labeler.py  paired_png_labeler.py
cuvis_ai_dataloader/data/readers/: __init__.py  cu3s_reader.py  tiff_reader.py
cuvis_ai_dataloader/scripts/: __init__.py  convert_cu3s_to_npz.py  resolve_splits.py
tests/: conftest.py
tests/cuvis_ai_dataloader/data/: test_coco_labeler.py  test_coco_labeler_anomaly.py  test_cu3s_datamodule.py  test_cu3s_multi.py  test_cu3s_workspace.py  test_extras.py  test_gui_splits_contract.py  test_npz_converter.py  test_npz_datamodule.py  test_resolvers.py  test_split_resolver.py  test_tiff_paired.py  test_universe.py  test_workspace.py
tests/cuvis_ai_dataloader/fixtures/: gui_authored_splits.json  mock_sdk.py
